--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       </div>
 
       <div class="copyright">
-        Daniel Forte <script>document.write(new Date().getFullYear());</script>
+        Forte Group<script>document.write(new Date().getFullYear());</script>
       </div>
         
 
