--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- Libraries CSS Files -->
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/aos/aos.css" rel="stylesheet">
   <link href="lib/magnific-popup/magnific-popup.css" rel="stylesheet">
   <link href="lib/hover/hover.min.css" rel="stylesheet">
 
@@ -79,7 +80,7 @@
     <div class="container">
       <div class="row justify-content-between">
 
-        <div class="col-lg-4 ">
+        <div data-aos="fade-right" class="col-lg-4">
           <div class="div-img-bg">
             <div class="about-img">
               <img src="images/headshot.jpg" class="img-responsive" alt="me">
@@ -117,7 +118,7 @@
     </div>
 
     <div class="container">
-      <div class="blog-block">
+      <div data-aos="fade-up" class="blog-block">
         <div class="row">
 
           <div class="col-lg-4 col-md-6">
@@ -185,7 +186,7 @@
     </div>
 
     <div class="container">
-      <div class="featured-block">
+      <div data-aos="fade-up" class="featured-block">
         <div class="row">
 
           <div class="col-lg-3 col-md-6">
@@ -266,7 +267,7 @@
           <div class="section-title text-center">
             <h2>Reviews</h2>
           </div>
-          <div class="reviews-carousel owl-theme">
+          <div data-aos="fade-up" class="reviews-carousel owl-theme">
     
             <div class="reviews-block">
     
@@ -331,7 +332,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="" method="post" role="form" class="contactForm" netlify>
+            <form action="" method="post" role="form" netlify>
               <div class="row">
 
                 <div id="sendmessage">Your message has been sent. Thank you!</div>
@@ -404,8 +405,10 @@
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
+  <script src="lib/aos/aos.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="lib/typed/typed.js"></script>
+  <script src="lib/wow/wow.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="lib/magnific-popup/magnific-popup.min.js"></script>
   <script src="lib/isotope/isotope.pkgd.min.js"></script>
