--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div id="header" class="home">
 
     <div class="container">
-      <div class="header-content">
+      <div data-aos="zoom-in" class="header-content">
         <img class="logo-hero" src="images/forte-logo.svg" alt="logo"></a>
         <h1><span class="typed"></span></h1>
       </div>
