--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="featured-info hover01">
 
               <a href="https://curiocity.com/heres-how-much-you-need-to-make-per-year-to-own-a-basic-toronto-condo/">
-                <figure><img src="images/BeFunky-collage-15.png" class="img-responsive" alt="img"></figure>
+                <figure><img src="images/BeFunky-collage.png" class="img-responsive" alt="img"></figure>
               </a>
 
               <div class="featured-txt">
