finished main page

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <!-- end section services -->
 
   <div class="container">
-      <hr class="hr" />
+      <hr class="hr text" />
   </div>
 
   <!-- start section featured -->
@@ -281,7 +281,7 @@
       <div class="contact-block1">
         <div class="row">
 
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <div class="contact-contact">
 
               <h2 class="mb-30 uppercase">Contact me</h2>
@@ -289,7 +289,7 @@
               <ul class="contact-details">
                 <li><span>Toronto, ON</span></li>
                 <li><span>Daniel@johnson-team.com</span></li>
-                <li><span>I'm available for sessions, <br> hit the link below to book time with me!</span></li>
+                <li><span>If you’d like to chat with me, the easiest way would be booking a call. I’m available to dig deeper into your business goals! Hit the link below to book a time with me</span></li>
               </ul>
               <a class="link uppercase" href="https://calendly.com/thejohnsonteamre/fortecoaching?month=2023-02"><i class="ion-calendar"></i> Book with my calendly</a>
              
@@ -297,7 +297,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-8">
             <form action="" method="post" role="form" netlify>
               <div class="row">
 
