added blog posts

--- a/index.html
+++ b/index.html
@@ -91,22 +91,26 @@
         <div class="col-lg-7">
           <div class="about-descr">
             <h2 class="uppercase">Business</h2>
-            <p class="separator">Daniel has been a full-time realtor with the Toronto Real Estate Board since 2014 with an extensive focus on lead generation & conversion. He’s originally from & still currently lives within Toronto. Though Daniel still services his clients and network when selling & buying, he has recently partnered with the #14 ranked Re/Max team in Canada working as their Team Lead. As a coach who works full-time in the industry, my clients appreciate that I am in the trenches with them, adjusting & adapting to the markets, the uncertainties, and all other factors that determine if our clients will buy or sell. </p>
+            <p class="separator">Daniel is originally from and still currently residing within Toronto, Daniel is a full-time realtor with the Toronto Real Estate Board since 2014 with a focus on lead generation & conversion. Still servicing his clients, Daniel has recently partnered with the #14 ranked Re/Max team in Canada working as the team leader. Duties include 1 on 1 coaching, group seminars, Tom Ferry group masterminding, and an ongoing strategic focus to navigate the market resulting in a quarterly increase in units sold. </p>
 
-            <p class="separator">Daniel has had mentors and coaches every step of the way in his career and credits the ongoing learning and dedication from his coaches for much of his success. It is for these reasons Daniel believes every realtor should work with a coach, even if it is just to remain accountable to themselves.</p>
+            <p class="separator">As a coach who works full-time in the industry, my clients appreciate that I am in the trenches with them, adjusting & adapting to the markets, the uncertainties, and all other factors that determine if our clients will buy or sell. </p>
 
-            <p class="separator">Always learning is one of Daniel’s core values, as he continues to be a member of, and coached within Tom Ferry’s Legacy platform. Passing on his learnings and observing agents he works with become more disciplined, focused and successful within their business is the ultimate accomplishment.</p>
           </div>
-        </div>
 
-        <div class="col-lg-12">
           <div class="about-descr mt-5">
             <h2 class="uppercase">Personal</h2>
             <p class="separator">I feel it is important to know a little bit about me on a personal level! Outside of work I focus most of my energy in the gym, on my Peloton, and with my wife & family.  I’m a car guy, watcher of basically any competitive sport, and would consider my happy places to be seats on planes heading somewhere warm, sales team meetings, and an open road with a scenic view. </p>
 
-            <p class="separator">’ve dedicated my career to helping my clients create wealth within the real estate sector, and now I have found as much, if not more satisfaction dedicating my time to the agents I work with. I look forward to every new opportunity that presents itself, regardless of experience or budget.</p>
           </div>
         </div>
+
+        <!-- <div class="col-lg-12">
+          <div class="about-descr mt-5">
+            <h2 class="uppercase">Personal</h2>
+            <p class="separator">I feel it is important to know a little bit about me on a personal level! Outside of work I focus most of my energy in the gym, on my Peloton, and with my wife & family.  I’m a car guy, watcher of basically any competitive sport, and would consider my happy places to be seats on planes heading somewhere warm, sales team meetings, and an open road with a scenic view. </p>
+
+          </div>
+        </div> -->
 
       </div>
     </div>
@@ -128,20 +132,20 @@
       <div class="container space">
           <div class="row">
 
-            <div class="services-block col-lg-4 text-center">
-              <i class="ion-ios-browsers-outline services-icon"></i>
+            <div data-aos="fade-up" class="services-block col-lg-4 text-center">
+              <i class="ion-ribbon-b services-icon"></i>
               <span class="uppercase">Accountability Plus+</span>
               <p class="separator">The backbone of any successful business owner is accountability. Within our career, freedom comes easy however the accountability to produce for not only yourself, but everyone around you, is the hardest aspect of the business to master. Within the Accountability Plus+ program we will use our systems to plan your business for the year, breaking it down to quarterly goals and getting after it! </p>
             </div>
   
-            <div class="services-block col-lg-4 text-center">
-              <i class="ion-ios-lightbulb-outline services-icon"></i>
+            <div data-aos="fade-up" class="services-block col-lg-4 text-center">
+              <i class="ion-network services-icon"></i>
               <span>1 on 1 Coaching Programs</span>
               <p class="separator">Our one-on-one coaching sessions are tailored to your specific needs and goals. We'll work together to develop a customized plan to help you achieve success in your real estate career. Accountability Plus+ program is already integrated into our one-on-one program.</p>
             </div>
   
-            <div class="services-block col-lg-4 text-center">
-              <i class="ion-ios-color-wand-outline services-icon"></i>
+            <div data-aos="fade-up" class="services-block col-lg-4 text-center">
+              <i class="ion-calendar services-icon"></i>
               <span class="uppercase">30-60-90</span>
               <p class="separator">Our comprehensive 30-60-90 day training programs cover everything you need to know to succeed in the real estate industry. From the basics of real estate transactions, to advanced marketing strategies, this program has got you covered. There are various group training sessions, masterminds, and more included in this program. The 30-60-90 program is only open to full-time agents as it is a demanding program that requires at least 16 weeks.</p>
             </div>
@@ -233,7 +237,7 @@
           <div class="section-title text-center">
             <h2>Reviews</h2>
           </div>
-          <div data-aos="fade-up" class="reviews-carousel owl-theme">
+          <div class="reviews-carousel owl-theme">
     
             <div class="reviews-block">
     
