--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
     </div>
 
     <div class="container">
-      <div data-aos="fade-up" class="featured-block">
+      <div class="featured-block">
         <div class="row">
 
           <div class="col-lg-3 col-md-6">
-            <div class="featured-info hover01">
+            <div data-aos="fade-up" class="featured-info hover01">
 
               <a href="https://www.insauga.com/">
                 <figure><img src="images/InSauga-min.png" class="img-responsive" alt="img"></figure>
@@ -193,7 +193,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6">
-            <div class="featured-info hover01">
+            <div data-aos="fade-up" class="featured-info hover01">
 
               <a href="https://curiocity.com">
                 <figure><img src="images/Curiosity-min.png" class="img-responsive" alt="img"></figure>
@@ -203,7 +203,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6">
-            <div class="featured-info hover01">
+            <div data-aos="fade-up" class="featured-info hover01">
 
               <a href="https://www.narcity.com">
                 <figure><img src="images/Narcity-min.png" class="img-responsive" alt="img"></figure>
@@ -213,7 +213,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6">
-            <div class="featured-info hover01">
+            <div data-aos="fade-up" class="featured-info hover01">
 
               <a href="https://www.livabl.com">
                 <figure><img src="images/Livabl_-min.png" class="img-responsive" alt="img"></figure>
