--- a/blog.html
+++ b/blog.html
@@ -161,9 +161,9 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="#"><i class="ion-social-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=506786350" target="_blank"><i class="ion-social-facebook"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/daniel-forte-87258a105/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
+            <!-- <li><a href="#"><i class="ion-social-instagram"></i></a></li> -->
         </ul>
 
       </div>
